force-app/main/default/objects/EZProtect4SF__EZProtectScanEvent__e/EZProtect4SF__EZProtectScanEvent__e.object-meta.xml
<CustomObject>
    <label>EZProtect Scan Event</label>
    <pluralLabel>EZProtect Scan Events</pluralLabel>
</CustomObject>