force-app/main/default/objects/EZProtect4SF__EZProtectScanEvent__e/fields/EZProtect4SF__Checksum__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__Checksum__c</fullName>
    <label>Checksum</label>
    <length>80</length>
    <type>Text</type>
</CustomField>