force-app/main/default/objects/EZProtect4SF__EZProtectScanEvent__e/fields/EZProtect4SF__Extension__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__Extension__c</fullName>
    <label>Extension</label>
    <length>20</length>
    <type>Text</type>
</CustomField>