force-app/main/default/objects/EZProtect4SF__EZProtectScanEvent__e/fields/EZProtect4SF__Filename__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__Filename__c</fullName>
    <label>Filename</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>