force-app/main/default/objects/EZProtect4SF__EZProtectScanEvent__e/fields/EZProtect4SF__FileType__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__FileType__c</fullName>
    <description>The file type metadata returned by the EZProtect File Type scanner.</description>
    <label>File Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>