force-app/main/default/objects/EZProtect4SF__EZProtectScanEvent__e/fields/EZProtect4SF__IsLatest__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__IsLatest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this event is associated with the most latest scan event for this file. Files can be associated with one or more scan records.</description>
    <label>Is Latest</label>
    <type>Checkbox</type>
</CustomField>