force-app/main/default/objects/EZProtect4SF__EZProtectScanEvent__e/fields/EZProtect4SF__RelatedRecordId__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__RelatedRecordId__c</fullName>
    <description>The related Salesforce record to the file. For Attachment records this is the ParentId. For ContentVersion records this is the FirstPublishLocationId.</description>
    <label>Related Record</label>
    <length>18</length>
    <type>Text</type>
</CustomField>