force-app/main/default/objects/EZProtect4SF__EZProtectScanEvent__e/fields/EZProtect4SF__ScanActivityId__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__ScanActivityId__c</fullName>
    <description>The Salesforce Id for the EZProtect scan activity record that triggered this event.</description>
    <label>Scan Activity Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>