force-app/main/default/objects/EZProtect4SF__EZProtectScanEvent__e/fields/EZProtect4SF__ScanDetail__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__ScanDetail__c</fullName>
    <description>The JSON detail returned from the scanning service. Provides detailed information for each scan performed.</description>
    <label>Scan Detail</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>