force-app/main/default/objects/EZProtect4SF__EZProtectScanEvent__e/fields/EZProtect4SF__ScanResult__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__ScanResult__c</fullName>
    <description>The overall scan result for the EZProtect scan activity record at the time the event was fired. The scan status takes a pessimistic approach. If any scanner reported a threat, then threat is reported. If any scanner reported an error, then error is reported.</description>
    <label>Scan Result</label>
    <length>50</length>
    <type>Text</type>
</CustomField>