force-app/main/default/objects/EZProtect4SF__EZProtectScanEvent__e/fields/EZProtect4SF__Status__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__Status__c</fullName>
    <description>The status of the EZProtect scan activity record at the time that the event was triggered.</description>
    <label>Status</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>