force-app/main/default/objects/EZProtect4SF__EZProtectScanEvent__e/fields/EZProtect4SF__TargetCreatedById__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__TargetCreatedById__c</fullName>
    <description>The Id of the Salesforce user that created the Attachment, ContentVersion, Document, or StaticResource.</description>
    <label>Target Created By Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>