force-app/main/default/objects/EZProtect4SF__EZProtectScanEvent__e/fields/EZProtect4SF__TargetId__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__TargetId__c</fullName>
    <description>The Id of the File, Attachment, Document, or ContentVersion record scanned or to be scanned.</description>
    <label>Target Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>