force-app/main/default/objects/EZProtect4SF__EZProtectScanEvent__e/fields/EZProtect4SF__TargetType__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__TargetType__c</fullName>
    <description>The type of file that was scanned or will be scanned. Valid values are Attachment, ContentVersion, Document, or StaticResource.</description>
    <label>Target Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>